--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,18 @@ body {
 }
 
 .page-header {
+  position:absolute;
+  top: 10rem;
   color: white;
   margin-bottom: 10vh;
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-  font-size: 2rem;
+  font-size: 3em;
   background-image: linear-gradient(45deg, #78edf6, #ef7d98);
   background-size: 100%;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bolder;
 }
+
+
